feat: added interaface for processing product coupon assignment sheets (#3406)
* temp: WIP

* feat: added interaface for processing product coupon assignment sheets

* fix: issues

* fix: issues

* fix: remove unused import and ruff style issues

* fix: issues

--- a/static/scss/ecommerce-admin.scss
+++ b/static/scss/ecommerce-admin.scss
@@ -18,27 +18,34 @@
   }
 }
 
-.skipped-warning {
+.form-message {
   border-radius: 5px;
-  background-color: $warning-background;
   color: $white;
   padding: 15px;
   margin-bottom: 16px;
 
-  .warning-div {
+  .message-div {
     display: flex;
   }
 
-  .warning-icon {
+  .message-icon {
     margin: 0 10px 0 0;
   }
 
-  .warning-text {
+  .message-text {
     margin: 0;
   }
 
-  .warning-list {
+  .message-list {
     margin: 0 0 0 10px;
+  }
+
+  &.form-success {
+    background-color: $success-background;
+  }
+
+  &.form-warning {
+    background-color: $warning-background;
   }
 }
 
@@ -153,5 +160,14 @@ button.btn.btn-gradient-white-to-blue:hover {
   .small-text {
     font-size: 14px;
     max-width: 600px;
+  }
+}
+
+.checkbox-div {
+  padding: 0 !important;
+
+  label {
+    padding-left: 5px;
+    margin: 0;
   }
 }
