--- a/cms/templates/partials/metadata-tiles.html
+++ b/cms/templates/partials/metadata-tiles.html
@@ -94,7 +94,7 @@
       {% if ceus %}
       <li>
         <span class="title">CEUs</span>
-        <span class="text">{{ ceus|floatformat }}</span>
+        <span class="text">{{ ceus|floatformat:"-2" }}</span>
       </li>
       {% endif %}
       {% if page.product.current_price %}
