fix, even better representation in case of one decimal place

--- a/cms/templates/certificate_page.html
+++ b/cms/templates/certificate_page.html
@@ -165,7 +165,7 @@
           <span class="award-text">
             {% if page.CEUs %}
             Awarded
-            {{ CEUs|floatformat:"-2" }}
+            {{ CEUs|stringformat:"g" }}
             Continuing Education Units (CEUs) <br />
             {% endif %}
 
