fix: first name and duration

--- a/mail/templates/welcome_course_run_enrollment/body.html
+++ b/mail/templates/welcome_course_run_enrollment/body.html
@@ -23,7 +23,7 @@
         >
           <p style="margin: 0 0 10px">
             Dear
-            {{ user.name }},
+            {{ user.legal_address.first_name }},
           </p>
           <p style="margin: 0 0 10px">Welcome to MIT xPRO!</p>
           <p style="margin: 0 0 10px">
