style: improve email template spelling, spacing and formatting

--- a/mail/templates/welcome_course_run_enrollment/body.html
+++ b/mail/templates/welcome_course_run_enrollment/body.html
@@ -26,6 +26,18 @@
             Dear
             {{ user.legal_address.first_name }},
           </p>
+        </td>
+      </tr>
+      <tr>
+        <td
+          style="
+            padding: 20px;
+            font-family: sans-serif;
+            font-size: 15px;
+            line-height: 20px;
+            color: #555555;
+          "
+        >
           <p style="margin: 0 0 10px">Welcome to MIT xPRO!</p>
           <p style="margin: 0 0 10px">
             You are now enrolled in <strong>{{ enrollment.run.title }}</strong>.
@@ -115,7 +127,7 @@
             <a href="{{ base_url }}{% url 'user-dashboard' %}">
               your
               {{ site_name }}
-              Dashboard </a
+              Dashboard</a
             >, locate your course, and click its name to get started!
             <a
               href="https://xpro.zendesk.com/hc/en-us/articles/15757684685467-How-can-I-access-and-view-my-enrolled-courses"
@@ -142,17 +154,17 @@
             <strong><u>Where to Seek Support:</u></strong>
             <br />
             Once your course session starts, you should familiarize yourself
-            with its Courseware—especially the first module, which typically
-            contains important information introducing you to the course, its
-            structure, schedule, and deadlines, and any special instructions or
-            considerations unique to this course.
+            with its Courseware&mdash;especially the first module, which
+            typically contains important information introducing you to the
+            course, its structure, schedule, and deadlines, and any special
+            instructions or considerations unique to this course.
           </p>
           <p style="margin: 0 0 10px">
             Additionally, each MIT xPRO course offers in-course discussion
-            forums, hich will allow you to both engage with your fellow learners
-            and seek support from your dedicated Course Assistant (CA) Team. The
-            CA Team actively monitors these forums to offer assistance and
-            guidance to all learners.
+            forums, which will allow you to both engage with your fellow
+            learners and seek support from your dedicated Course Assistant (CA)
+            Team. The CA Team actively monitors these forums to offer assistance
+            and guidance to all learners.
           </p>
           <p style="margin: 0 0 10px">
             Any questions you may have about in-course matters, such as course
@@ -174,7 +186,8 @@
             >
             and we'll be happy to help! You can also find a lot of useful
             information in
-            <a href="https://xpro.zendesk.com/hc/en-us">MIT xPRO Help Center</a
+            <a href="https://xpro.zendesk.com/hc/en-us"
+              >the MIT xPRO Help Center</a
             >.
           </p>
           <p style="margin: 0 0 10px">
@@ -182,21 +195,31 @@
             <br />
             In addition to this Welcome Letter, a payment receipt email was sent
             to the email address used to complete your purchase. The receipt can
-            also be accessed via your xPRO Dashboard—
-            <a
+            also be accessed via your xPRO Dashboard&mdash;<a
               href="https://xpro.zendesk.com/hc/en-us/articles/35109598265243-How-do-I-view-my-receipt"
+              >see this FAQ article for a guide.</a
             >
-              see this FAQ article for a guide.
-            </a>
           </p>
           <p style="margin: 0 0 10px">
             We look forward to supporting you during your time with MIT xPRO. If
-            you have any further questions or need assistance, please do not
+            you have any further questions or need assistance, please don't
             hesitate to reach out.
           </p>
           <p style="margin: 0 0 10px">
             Get ready to unlock your potential and excel!
           </p>
+        </td>
+      </tr>
+      <tr>
+        <td
+          style="
+            padding: 20px;
+            font-family: sans-serif;
+            font-size: 15px;
+            line-height: 20px;
+            color: #555555;
+          "
+        >
           <p style="margin: 0 0 10px">Best wishes,</p>
           <p style="margin: 0 0 10px">MIT xPRO Team</p>
         </td>
