config: Increase allowable header size for Nginx

--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -14,6 +14,7 @@ http {
     gzip on;
     gzip_comp_level 2;
     gzip_min_length 512;
+    large_client_header_buffers 4 32k;
 
     server_tokens off;
 
