--- a/cms/templates/partials/catalog_empty.html
+++ b/cms/templates/partials/catalog_empty.html
@@ -1,5 +1,1 @@
-<div class="empty-catalog-message">
-  <div>
-    <h1>No results found</h1>
-  </div>
-</div>
+<div class="empty-catalog-message">No results found</div>
