fix: fmt issues

--- a/static/scss/detail/tiles.scss
+++ b/static/scss/detail/tiles.scss
@@ -104,8 +104,8 @@
 }
 
 .popover {
-  font-family: Rajdhani, "Open Sans", "Helvetica Neue", Helvetica, Arial,
-    sans-serif !important;
+  font-family:
+    Rajdhani, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   font-weight: 600;
   max-width: 100% !important;
 
