--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -51,8 +51,8 @@
 @import "detail/enterprise/learning-strategy-form";
 
 body {
-  font-family: Rajdhani, "Open Sans", "Helvetica Neue", Helvetica, Arial,
-    sans-serif;
+  font-family:
+    Rajdhani, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 
   .main-panel {
