--- a/static/scss/catalog/body.scss
+++ b/static/scss/catalog/body.scss
@@ -53,18 +53,45 @@ h5 {
   }
 }
 
-.topics {
+.courseware {
+  width: 100%;
+}
+
+.courseware-filter-container {
+  @extend .container;
+
+  width: auto;
+  margin-right: 0;
+  margin-left: 1px;
+
+  @include media-breakpoint-down(md) {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+.courseware-filters {
   padding-inline-start: 0;
-  margin-top: 15%;
-  margin-right: 18px;
+  margin-top: 90px;
   width: 231px;
 
   @include media-breakpoint-down(md) {
     display: flex;
-    flex-wrap: wrap;
-    margin-left: 20px;
-    margin-top: 35px;
-    width: fit-content;
+    width: auto;
+    flex-direction: row;
+    margin-bottom: 0;
+    margin-top: 56px;
+    margin-right: 0;
+    gap: 16px;
+  }
+
+  @include media-breakpoint-down(sm) {
+    flex-direction: column;
+    margin-right: 16px;
+    margin-left: 16px;
   }
 
   .topic {
@@ -166,6 +193,10 @@ h5 {
 
       .cover-image {
         max-width: calc(240px + #{$standard-padding});
+
+        @include media-breakpoint-down(sm) {
+          max-width: 100%;
+        }
       }
 
       .top-level-details {
