--- a/static/scss/top-app-bar.scss
+++ b/static/scss/top-app-bar.scss
@@ -118,3 +118,56 @@
     }
   }
 }
+
+.mobile-drawer {
+  position: fixed;
+  top: 0;
+  right: -280px;
+  width: 280px;
+  height: 100vh;
+  background-color: white;
+  transition: right 0.3s ease;
+  z-index: 1050;
+  overflow-y: auto;
+  padding: 1.5rem 1rem;
+  box-shadow: -2px 0 10px rgb(0 0 0 / 10%);
+}
+
+.mobile-drawer.open {
+  right: 0;
+}
+
+.drawer-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 50%);
+  z-index: 1040;
+}
+
+.drawer-header {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 1rem;
+}
+
+.close-drawer {
+  background: none;
+  border: none;
+  font-size: 1.75rem;
+  line-height: 1;
+  padding: 0;
+  cursor: pointer;
+}
+
+.drawer-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.drawer-nav li {
+  margin-bottom: 1.25rem;
+}
