style: topics capitalized

--- a/static/scss/top-app-bar.scss
+++ b/static/scss/top-app-bar.scss
@@ -190,6 +190,7 @@ a.mobile-auth-button {
   display: block;
   color: #333;
   text-decoration: none;
+  text-transform: capitalize;
   font-size: 0.9375rem;
   line-height: 1.4;
 
