--- a/static/scss/ecommerce-admin.scss
+++ b/static/scss/ecommerce-admin.scss
@@ -177,7 +177,7 @@ button.btn.btn-gradient-white-to-blue:hover {
   z-index: 10;
   background: white;
   border: 1px solid #ccc;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
   margin-top: 4px;
   padding: 30px;
 }
