fix: some issues

--- a/cms/templates/certificate_page.html
+++ b/cms/templates/certificate_page.html
@@ -142,7 +142,7 @@
             >Massachusetts Institute of Technology</span
           >
           {% endif %}
-          {% if page.partner_logo == None or page.partner_logo_placement == None or page.display_seal %}
+          {% if page.partner_logo == None or page.partner_logo_placement == None or page.display_mit_seal %}
           <div class="institute-logo">
             <img
               src="{% static 'images/certificates/certificate-logo.png' %}"
