--- a/mitxpro/templates/base.html
+++ b/mitxpro/templates/base.html
@@ -42,6 +42,8 @@
       content="{{ domain_verification_tag }}"
     />
     {% endif %}
+    {% block extrahead %}
+    {% endblock %}
     {% endspaceless %}
   </head>
   <body class="{% block bodyclass %}{% endblock %}">
