--- a/cms/templates/catalog_page.html
+++ b/cms/templates/catalog_page.html
@@ -109,7 +109,7 @@
               <div class="catalog-nav-head">
                 <div class="nav-tabs-container">
                   <ul class="nav nav-tabs" role="tablist">
-                    <li class="nav-item">
+                    <li class="nav-item" data-tab-name="all-tab">
                       {% if active_tab == "all-tab" %}
                       <a
                         id="all-tab"
@@ -139,6 +139,7 @@
                       data-toggle="tooltip"
                       title="Multi-course offerings"
                       data-placement="bottom"
+                      data-tab-name="programs-tab"
                     >
                       {% if active_tab == "programs-tab" %}
                       <a
@@ -169,6 +170,7 @@
                       data-toggle="tooltip"
                       title="Single course offerings"
                       data-placement="bottom"
+                      data-tab-name="courses-tab"
                     >
                       {% if active_tab == "courses-tab" %}
                       <a
