fix: frontend CI

--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -19,7 +19,7 @@
   href="{% static 'css/vendor/jquery.fancybox.min.css'%}"
   rel="stylesheet"
   media="none"
-  onload="if(media!='all')media='all'"
+  onload="if (media != 'all') media = 'all';"
 />
 {% endblock %}
 
