--- a/cms/templates/partials/blog_post_card.html
+++ b/cms/templates/partials/blog_post_card.html
@@ -1,4 +1,4 @@
-<div class="post slide" onclick="window.open('{{ post.link }}', '_blank');">
+<div class="post slide" onclick="window.open('{{ post.link }}', '_blank')">
   <div class="card-top">
     <img src="{{ post.banner_image }}" />
     <div class="post-tags">
