--- a/mitxpro/templates/base.html
+++ b/mitxpro/templates/base.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
       media="none"
-      onload="if(media!='all') media='all'"
+      onload="if (media != 'all') media = 'all';"
     />
     {% js_settings %}
     <script type="text/javascript">
